fix landscape mobile searchResults pushing and overlapping other content

--- a/src/App.css
+++ b/src/App.css
@@ -820,4 +820,15 @@ input:checked + .slider:before {
   .closeBugReportButton {
     height : 25px;
   }
+
+  .searchResultsContainer {
+    position: absolute;
+    width: inherit;
+    margin-top: 10%;
+    overflow: hidden;
+  }
+
+  .searchResultContainer {
+    overflow: hidden;
+  }
 }
